This includes - fix: Initial render for github repos was unsuccessful in 3.2. Enabled refetchOnMount in SWRConfig did the trick. feat: Now user will be able to loader while github data is being fetched. style: Reduce font weight of all the cards. chore: Remove couple of redundant files.

--- a/common-components/Card/index.module.scss
+++ b/common-components/Card/index.module.scss
@@ -8,6 +8,7 @@
     display: flex;
     h3 { 
         margin: 0 0 0.5rem 0;
+        font-weight: 500;
     }
     summary {
         font-size: 0.9rem;
