--- a/components/Repo/index.module.scss
+++ b/components/Repo/index.module.scss
@@ -57,6 +57,11 @@
     height: 100%;
     align-items: flex-end;
 }
+.alert {
+    display: flex;
+    justify-content: center;
+    margin: 2rem auto;
+}
 @media screen and (max-width: 600px) {
     .container__card {
         width: 100%;
