This update includes - style: Star icon scaled down to size of fork icon. refactor: Fix types in couple of places. doc: Update readme with more commands.

--- a/components/Contribution/index.module.scss
+++ b/components/Contribution/index.module.scss
@@ -37,7 +37,7 @@
     }
     &:hover {
         background-color: var(--red-hover);
-        .extLink {
+        .container__card__extLink {
             display: block !important;
         }
     }
