--- a/components/Blog/index.module.scss
+++ b/components/Blog/index.module.scss
@@ -20,3 +20,29 @@
 .extLink {
     display: none !important;
 }
+.summary {
+    font-size: 0.8rem;
+    font-weight: 200;
+    span:not(:first-child)::before {
+        content: "";
+        display: inline-block;
+        width: 8px;
+        background: var(--red);
+        height: 8px;
+        margin: 0 0.5rem;
+        border-radius: 50%;
+    }   
+}
+.statsText {
+    font-size: 0.7rem;
+    margin-top: 0.25rem;
+}
+.statsLoader {
+    display: inline;
+    vertical-align: middle;
+    margin-left: 0.5rem;
+    div {
+        border-radius: 6px;
+        display: inline-block;
+    }
+}
