Changelog(3.3.2). Expand to see more. feat: Latest contributions will have more accurate data. Thanks to new graphql query. mod: Add dompurify package. refactor: Latest contributions card body now parses HTML. refactor: Few Directory related changes. refactor: Stepping stones for new designs for upcoming release. style: Right aligned view more button. docs: Update content across application.

--- a/components/Blog/index.module.scss
+++ b/components/Blog/index.module.scss
@@ -46,3 +46,24 @@
         display: inline-block;
     }
 }
+/* For future usage */
+// .blog__header {
+//     color: white;
+//     background-color: var(--red);
+//     border-radius: 20px;
+//     width: fit-content;
+//     padding-right: 0.5rem;
+//     font-size: 1.2rem;
+//     text-shadow: -1px -1px 2px hsl(10, 58%, 30%);
+//     &::before {
+//         content: "";
+//         width: 10px;
+//         height: 10px;
+//         border-radius: 50%;
+//         margin: 0.5rem;
+//         background-color: white;
+//         display: inline-block;
+//         vertical-align: middle;
+
+//     }
+// }
