--- a/components/Contribution/index.module.scss
+++ b/components/Contribution/index.module.scss
@@ -6,7 +6,7 @@
     margin-bottom: 1rem;
 }
 .container__card {
-    padding: 0.5rem;
+    padding: 0.5rem 0.5rem 0 0.5rem;
     transition: all 0.2s ease-in-out;
     box-shadow: 0px 2px 4px 1px var(--red-shadow);
     border-top: 3px solid var(--red);
@@ -66,10 +66,15 @@
 .container__card__body__forkStar {
     display: flex;
     align-items: flex-end;
+    font-size: 0.8rem;
     figure {
         margin: 0.5rem;
         margin-left: 0;
         display: flex;
+        align-items: center;
+        span {
+            margin-left: 0.2rem;
+        }
     }
 }
 .container__card__body__languages {
