--- a/components/Introduction/index.module.scss
+++ b/components/Introduction/index.module.scss
@@ -5,4 +5,12 @@
 }
 .intro__name {
     color: black;
+    transition: all 0.2s ease-in-out;
+    &:hover {
+        background-color: var(--red);
+        color: white;
+        padding: 0.2rem;
+        border-radius: 5px;
+        box-shadow: 2px 3px 5px 1px rgba(0,0,0,0.2);
+    }
 }
