--- a/components/NavMenu/index.scss
+++ b/components/NavMenu/index.scss
@@ -20,11 +20,8 @@
 		color: white;
 		padding: 0.5rem;
 		font-size: 0.8rem;
-		transition: background-color 0.2s ease-in-out;
 		&:hover {
-			border-top: 3px solid var(--red);
-        	border-right: 1px solid var(--red);
-			padding: 0.5rem;
+			@include active_link;
 		}
 	}
 }
@@ -32,6 +29,9 @@
 	display: flex;
 	align-items: center;
 	width: 170px;
+}
+.active {
+	@include active_link
 }
 @media screen and (max-width: 625px) {
 	.nav {
