refactor: revamp projects card

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1,6 +1,7 @@
 :root {
     --dark-gray: hsl(210, 13%, 24%);
     --gray: hsl(212, 6%, 42%);
+    --black30: hsla(0,0%,0%,0.3);
     --light-gray: hsl(0, 0%, 53%);
     --red: hsl(10, 91%, 62%);
     --red-hover: hsl(15, 100%, 98%);
@@ -29,3 +30,4 @@
   .mb0 {margin-bottom: 0;}
   .mb4 {margin-bottom: 4rem;}
   .mt2 {margin-top: 2rem;}
+  .mv2 {margin: 2rem 0;}
