--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,3 +5,5 @@
 // components
 @import "../components/NavMenu/index.scss";
 @import "../components/Footer/index.scss";
+@import "../components/Project/index.scss";
+@import "../components/Elements/SectionHeader/index.scss";
