--- a/common-components/Button/index.module.scss
+++ b/common-components/Button/index.module.scss
@@ -1,17 +1,14 @@
-.viewMore {
-    text-align: center;
-    display: block;
-    float: right;
-    padding: 0.5rem;
+.base {
+    padding: 0.4rem;
     max-width: 100px;
-    font-size: 0.8rem;
-    box-shadow: 2px 2px 4px 1px var(--red-shadow);
-    color: var(--red);
-    -webkit-transition: all 0.2s ease-in-out;
-    -moz-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-    justify-content: center;
+    font-size: 0.7rem;
+    color: var(--dark-gray);
+    font-weight: 600;
+    transition: 0.5s;
+    letter-spacing: 2px;
+    border: 2px solid var(--dark-gray);
     &:hover {
-        background-color: var(--red-hover);
+        box-shadow: inset 0 -3rem 0 0 var(--dark-gray);
+        color: white;
     }
 }
