--- a/pages/blogs/index.module.scss
+++ b/pages/blogs/index.module.scss
@@ -1,8 +1,34 @@
-.header {
-    border-bottom: 1px solid #b9b9b96e;
-    padding-bottom: 0.5rem;
-    h1 {
-        font-size: 2rem;
-        margin-bottom: 0;
+.summary {
+    font-size: 0.8rem;
+    border-left: 2px solid var(--dark-gray);
+    padding: 0.4rem 0.5rem;
+    margin: 1.5rem 0;
+    background-color: hsla(0, 0, 71%, 0.2);
+    width: fit-content;
+}
+.filter {
+    margin-bottom: 1rem;
+    display: flex;
+    justify-content: space-between;
+    &__input {
+        padding: 0.4rem;
+        border-radius: 0;
+        min-width: 150px;
+        border: 2px solid var(--dark-gray);
+        width: 75%;
+        outline: none;
+        caret-color: var(--red);
+    }
+    &__select {
+        padding: 0.35rem 0.4rem 0.4rem 0.4rem;
+        border: 1px solid black;
+        border: 2px solid var(--dark-gray);
+        outline: 0;
+        caret-color: var(--red);
+    }
+}
+@media screen and (max-width: 600px) {
+    .filter__input {
+        max-width: 180px;
     }
 }
