--- a/components/Blog/index.module.scss
+++ b/components/Blog/index.module.scss
@@ -1,26 +1,30 @@
-.blogCard {
+.post {
+    box-shadow: 0px 0px 14px 1px rgba(193, 193, 193, 50%);
+    padding: 0.8rem;
+    margin: 1.5rem 0;
     &:hover {
         background-color: var(--red-hover);
-        .extLink {
-            display: block !important;
+    }
+    &__header {
+        display: flex;
+        align-items: center;
+        margin-bottom: 1rem;
+        > h3 {
+            margin: 0 1rem 0 0;
         }
     }
+    &__stats {
+        font-size: 0.7rem;
+        margin-top: 0.5rem;
+    }
+    &__tags {
+        font-size: 0.7rem;
+        font-weight: 300;
+        color: var(--gray);
+        margin-right: 0.5rem;
+    }
 }
-.tag {
-    font-size: 0.6rem;
-    font-family: monospace;
-    color: white;
-    background-color: var(--red);
-    padding: 0.3rem;
-    margin-right: 0.25rem;
-}
-.tagGroup {
-    padding-bottom: 0.5rem;
-}
-.extLink {
-    display: none !important;
-}
-.summary {
+.stats {
     font-size: 0.8rem;
     font-weight: 200;
     span:not(:first-child)::before {
@@ -31,39 +35,14 @@
         height: 8px;
         margin: 0 0.5rem;
         border-radius: 50%;
-    }   
-}
-.statsText {
-    font-size: 0.7rem;
-    margin-top: 0.25rem;
-}
-.statsLoader {
-    display: inline;
-    vertical-align: middle;
-    margin-left: 0.5rem;
-    div {
-        border-radius: 6px;
-        display: inline-block;
+    } 
+    &__loader {
+        display: inline;
+        vertical-align: middle;
+        margin-left: 0.5rem;
+        div {
+            border-radius: 6px;
+            display: inline-block;
+        }
     }
 }
-/* For future usage */
-// .blog__header {
-//     color: white;
-//     background-color: var(--red);
-//     border-radius: 20px;
-//     width: fit-content;
-//     padding-right: 0.5rem;
-//     font-size: 1.2rem;
-//     text-shadow: -1px -1px 2px hsl(10, 58%, 30%);
-//     &::before {
-//         content: "";
-//         width: 10px;
-//         height: 10px;
-//         border-radius: 50%;
-//         margin: 0.5rem;
-//         background-color: white;
-//         display: inline-block;
-//         vertical-align: middle;
-
-//     }
-// }
