--- a/components/Elements/SectionHeader/index.scss
+++ b/components/Elements/SectionHeader/index.scss
@@ -5,8 +5,8 @@
     transition: 0.5s;
     margin-bottom: 1rem;
     &:hover {
-        box-shadow: inset 0 -3rem 0 0 var(--dark-gray);
-        cursor: pointer;
+        box-shadow: inset 0 -3.5rem 0 0 var(--dark-gray);
+        cursor: default;
         > h2 {
             color: white;
             padding-left: 0;
@@ -15,14 +15,14 @@
     > h2 {
         margin: 0;
         letter-spacing: 3px;
-        font-size: 16px;
-        padding: 0.5rem 1rem;
+        font-size: 20px;
+        padding: 0.5rem 0.5rem;
         border: 2px solid var(--dark-gray);
         transition: 0.5s;
     }
 }
 .icon {
-    padding: 0.42rem;
+    padding: 0.8rem;
     margin: 0;
     display: flex;
     align-items: flex-end;
