--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,4 +6,8 @@
 @import "../components/NavMenu/index.scss";
 @import "../components/Footer/index.scss";
 @import "../components/Project/index.scss";
+@import "../components/Repo/index.scss";
+
+//Elements
 @import "../components/Elements/SectionHeader/index.scss";
+@import "../components/Elements/Dropdown/index.scss";
