--- a/components/Contribution/index.module.scss
+++ b/components/Contribution/index.module.scss
@@ -1,70 +1,3 @@
-.container {
-    display: grid;
-    row-gap: 2rem;
-    column-gap: 2rem;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    margin-bottom: 1rem;
-}
-.container__card {
-    padding: 0.5rem 0.5rem 0 0.5rem;
-    transition: all 0.2s ease-in-out;
-    box-shadow: 0px 2px 4px 1px var(--red-shadow);
-    border-bottom: 2px solid var(--red);
-    border-left: none;
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    width: 320px;
-    min-width: 320px;
-    max-height: 300px;
-    height: 300px;
-    header {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        width: 100%;
-    }
-    h3 { 
-        margin: 0 0 0.5rem 0;
-    }
-    summary {
-        font-size: 0.9rem;
-        text-align: justify;
-        color: var(--gray);
-    }
-    small {
-        font-size: 0.7rem;
-    }
-    &:hover {
-        background-color: var(--red-hover);
-        .container__card__extLink {
-            display: block !important;
-        }
-    }
-}
-.container__card__author {
-    margin: 0.5rem;
-    display: flex;
-    align-items: center;
-    font-weight: var(--normal);
-    color: var(--gray);
-    margin-left: 0;
-    span {
-        margin-left: 0.5rem;
-        font-weight: 600;
-    }
-}
-.container__card__extLink {
-    display: none !important;
-}
-.container__card__body {
-    height: 100%;
-}
-.alert {
-    display: flex;
-    justify-content: center;
-    margin: 2rem auto;
-}
 .contributions {
     display: grid;
     row-gap: 2rem;
@@ -138,6 +71,12 @@
                 margin-left: 0.2rem;
             }
         }
+    }
+    &__tag {
+        font-size: 0.6rem;
+        font-family: monospace;
+        padding-left: 0.3rem;
+        margin-right: 0.7rem;
     }
 }
 @media screen and (max-width: 600px) {
