--- a/components/NavMenu/index.module.scss
+++ b/components/NavMenu/index.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/mixins.scss";
+
 .nav {
 	height: 80px;
 	display: flex;
@@ -5,7 +7,6 @@
 	justify-content: space-between;
     position: sticky;
     top: 0;
-    box-shadow: 0px 4px 20px 9px hsla(0, 0%, 42%, 0.478);
 	background: var(--dark-gray);
 	z-index: 99;
 }
@@ -31,14 +32,41 @@
 .active {
 	@include active_link
 }
+.icons {
+	position: sticky;
+	top: 81px;
+	z-index: 2;
+	display: flex;
+	width: 220px;
+	height: 30px;
+    align-items: center;
+	box-shadow: 0px 4px 20px 9px hsla(0, 0%, 42%, 0.478);
+	background: var(--dark-gray);
+	clip-path: polygon(0% 0%,100% 0%,86% 100%,0% 100%);
+}
+.socialIcon {
+    margin: 0.6rem;
+    padding: 0.3rem;
+    display: flex;
+    align-items: flex-end;
+    border-top: 3px solid var(--dark-gray);
+    border-right: 1px solid var(--dark-gray);
+    &:hover {
+        @include active_link;
+    }
+}
 @media screen and (max-width: 625px) {
 	.nav {
 		justify-content: space-evenly;
 		align-items: center;
 		margin-left: -1.5rem;
 		margin-right: -1.5rem;
-		padding: 0;
 		flex-direction: column;
 		height: 100px;
+		padding-bottom: 1rem;
+	}
+	.icons {
+		margin-left: -2rem;
+		top: 101px;
 	}
 }
