--- a/components/Blog/index.module.scss
+++ b/components/Blog/index.module.scss
@@ -17,12 +17,6 @@
         font-size: 0.7rem;
         margin-top: 0.5rem;
     }
-    &__tags {
-        font-size: 0.7rem;
-        font-weight: 300;
-        color: var(--gray);
-        margin-right: 0.5rem;
-    }
 }
 .stats {
     font-size: 0.8rem;
@@ -44,5 +38,11 @@
             border-radius: 6px;
             display: inline-block;
         }
+    }
+}
+@media screen and (max-width: 600px) {
+    .post__header {
+        flex-direction: column;
+        align-items: flex-start;
     }
 }
