--- a/pages/about/index.module.scss
+++ b/pages/about/index.module.scss
@@ -1,94 +1,83 @@
-@mixin inline__link {
-    color: var(--dark-gray);
-    text-decoration: underline;
-    transition: all 0.2s ease-in-out;
-    &:hover {
-        background-color: var(--red);
-        text-decoration: none;
-        color: white;
-        cursor: pointer;
-        padding: 0.2rem;
-        border-radius: 5px;
-        box-shadow: 2px 3px 5px 1px rgba(0,0,0,0.2);
-    }
-}
-.container {
-    display: flex;
-    margin: 3rem 0;
-    flex-direction: column;
-    justify-content: space-evenly;
-}
-.intro {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+.about {
     figure {
         border-radius: 50%;
-        display: flex;
-        width: 200px;
-        height: 200px;
+        margin: 0.5rem auto;
+        height: 160px;
+        width: 160px;
+        box-shadow: 0 1px 10px 1px rgb(0 0 0 / 20%);
     }
-    article {
-        width: fit-content;
-        flex: 2;
-        p {
-            text-align: justify;
-            font-weight: 400;
-            font-size: 0.95rem;
-            color: var(--dark-gray);
-            a {@include inline__link;}
-        }
-    }
-}
-.img {
-    border-radius: 50%;
-}
-.skillTag {
-    font-size: 0.8rem;
-    margin: 0.2rem;
-    min-width: 50px;
-    text-align: center;
-}
-.tagsContainer {
-    display: flex;
-    flex-wrap: wrap;
-}
-.contactMe {
-    font-size: 0.9rem;
-    text-align: justify;
-    opacity: 0.8;
-}
-.milestone {
-    h4 {
-        color: var(--dark-gray);
-        margin-bottom: 0.5rem;
+    summary, ul {
         font-size: 0.9rem;
-        font-weight: 500;
+        line-height: 1.5rem;
+        margin: 1.5rem 0;
+        text-align: justify;
     }
-    ul {
-        margin: 0;
-        padding-left: 1.5rem;
-        list-style: none;
-        li {
-            span {
-                margin-left: 1rem;
-                font-size: 0.9rem;
-                font-weight: 300;
-                vertical-align: top;
-                a {@include inline__link;}
-            }
+    &__icons {
+        display: flex;
+        justify-content: center;
+    }
+    &__container {
+        padding: 0.2rem;
+        display: flex;
+        align-items: center;
+    }
+    &__icon {
+        width: 0.8rem;
+        height: 0.8rem;
+        &--red {
+            fill: red;
         }
     }
-}
-.header3 {
-    font-weight: 500;
-}
-.icon {
-    width: 80px;
-    min-height: 80px;
-    margin: 0;
-    display: flex;
-    align-items: center;
+    &__iconlabel {
+        font-size: 0.7rem;
+    }
+    &__story {
+        position: relative;
+        width: fit-content;
+        margin: 2rem auto;
+        &::after {
+            content: "";
+            position: absolute;
+            width: 80px;
+            border-top: 2px solid var(--red);
+            top: 18px;
+            left: -90px;
+        }
+        &::before {
+            content: "";
+            position: absolute;
+            width: 80px;
+            border-top: 2px solid var(--red);
+            top: 18px;
+            right: -90px;
+        }
+    }
+    &__services {
+        list-style: none;
+        padding: 0;
+        li {
+            display: flex;
+            align-items: baseline;
+            margin-bottom: 0.5rem;
+        }
+        label {
+            margin-left: 0.5rem;
+        }
+    }
+    &__check {
+        width: 14px;
+        height: 14px;
+        stroke: tomato;
+        stroke-linecap: round;
+        stroke-linejoin: round;
+        stroke-width: 2;
+        fill: none;
+    }
+    &__support {
+        display: flex;
+        justify-content: center;
+        margin: 2rem 0;
+    }
 }
 @media screen and (max-width: 768px) {
     .intro {
