feat: Introduced quick-cards

--- a/components/Introduction/index.module.scss
+++ b/components/Introduction/index.module.scss
@@ -1,16 +1,52 @@
 .intro {
-    margin: 2rem 0;
-    color: var(--light-gray);
-    font-family: 'Poppins', cursive;
-}
-.intro__name {
-    color: black;
-    transition: all 0.2s ease-in-out;
-    &:hover {
-        background-color: var(--red);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 2rem;
+    &__article {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 4rem;
+        margin: 2px;
+        width: 250px;
+        max-width: 350px;
+        &--red { background-color: var(--red); }
+        &--blue { background-color: var(--blue); }
+        &--gray { background-color: var(--dark-gray); }
+        &--green { background-color: var(--green); }
+        &:hover .intro__icon {
+            opacity: 1;
+            transform: translate(0, -140%);
+            transition: all 0.4s ease-in-out;
+        }
+        &:hover .intro__text {
+            opacity: 0;
+        }
+    }
+    &__icon {
+        opacity: 0;
+        position: absolute;
+        left: calc(50% - 1.25rem);
+        bottom: 5%;
+        width: 2.5rem;
+        height: 2.5rem;
+        fill: white;
+    }
+    &__text {
         color: white;
-        padding: 0.2rem;
-        border-radius: 5px;
-        box-shadow: 2px 3px 5px 1px rgba(0,0,0,0.2);
+        font-weight: 600;
+        letter-spacing: 4px;
+        font-size: 18px;
+    }
+}
+@media screen and (max-width: 768px){
+    .intro {
+        justify-content: center;
+        &__article {
+            width: 220px;
+        }
     }
 }
