--- a/styles/common.scss
+++ b/styles/common.scss
@@ -7,6 +7,8 @@
     --red: hsl(10, 91%, 62%);
     --red-hover: hsl(15, 100%, 98%);
     --red-shadow: hsl(0, 13%, 72%, 30%);
+    --blue: hsl(240, 40%, 52%);
+    --green: hsl(134, 40%, 52%);
     --light: 300;
     --normal: 400;
     --bold: 500;
