--- a/pages/about/index.module.scss
+++ b/pages/about/index.module.scss
@@ -17,7 +17,7 @@
         justify-content: center;
     }
     &__container {
-        padding: 0.2rem;
+        padding: 0.2rem 0.4rem;
         display: flex;
         align-items: center;
     }
