--- a/components/Video/index.module.scss
+++ b/components/Video/index.module.scss
@@ -1,35 +1,14 @@
 .videos {
-    position: relative;
-    box-shadow: 3px 3px 4px rgba(157, 157, 157, 0.3), -3px -3px 4px rgba(236, 236, 236, 0.7);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0.5rem;
-    margin-bottom: 1rem;
-    align-items: center;
-    border-left: 2px solid var(--dark-gray);
-    &:hover {
-        background-color: var(--red-hover);
-        .videos__extlinkIcon {
-            display: block !important;
-        }
-    }
-    &__details {
+    &__list {
         display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
     }
     &__video {
-        margin: 0;
-        display: flex;
-        margin: 0 1rem;
+        margin-bottom: 0.5rem;
     }
-    &__extlink {
-        margin: 0;
-        position: absolute;
-        top: -2px;
-        right: 2px;
-    }
-    &__extlinkIcon {
-        display: none !important;
+    &__footer {
+        margin-top: 1rem;
     }
     &__games {
         margin-left: 0.5rem;
@@ -40,5 +19,11 @@
         &:hover {
             text-decoration: underline;
         }
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .videos__video {
+        width: 100%;
     }
 }
