fix: About page support section icons use name instead of label

--- a/pages/about/index.module.scss
+++ b/pages/about/index.module.scss
@@ -57,7 +57,7 @@
         padding: 0;
         li {
             display: flex;
-            align-items: baseline;
+            align-items: center;
             margin-bottom: 0.5rem;
         }
         label {
