fix: some bugs and enhancement done

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -14,6 +14,8 @@
   --blue50: hsla(240, 40%, 52%, 50%);
   --green: hsl(134, 40%, 52%);
   --green50: hsla(134, 40%, 52%, 50%);
+  --yellow: hsl(53, 98%, 47%);
+  --yellow10: hsla(53, 98%, 47%, 10%);
 }
 
 /* ---------------------Spacing----------------------- */
