refactor: renaming colors and fixed one icon issue

--- a/components/Blog/index.module.scss
+++ b/components/Blog/index.module.scss
@@ -26,7 +26,7 @@
         content: "";
         display: inline-block;
         width: 8px;
-        background: var(--red);
+        background: var(--tomato);
         height: 8px;
         margin: 0 0.5rem;
         border-radius: 50%;
