--- a/components/Footer/index.module.scss
+++ b/components/Footer/index.module.scss
@@ -8,7 +8,7 @@
         content: "";
         position: absolute;
         width: 60px;
-        border-top: 2px solid var(--red);
+        border-top: 2px solid var(--tomato);
         top: 28px;
         left: -80px;
     }
@@ -16,7 +16,7 @@
         content: "";
         position: absolute;
         width: 60px;
-        border-top: 2px solid var(--red);
+        border-top: 2px solid var(--tomato);
         top: 28px;
         right: -80px;
     }
