--- a/components/Video/index.module.scss
+++ b/components/Video/index.module.scss
@@ -15,7 +15,7 @@
         margin-left: 0.5rem;
         padding: 0.2rem;
         > small {
-            color: var(--red);
+            color: var(--tomato);
         }
         &:hover {
             text-decoration: underline;
