--- a/components/Contribution/index.module.scss
+++ b/components/Contribution/index.module.scss
@@ -11,7 +11,7 @@
         max-width: 320px;
         height: 250px;
         max-height: 300px;
-        border-bottom: 2px solid var(--dark-gray);
+        border-bottom: 2px solid var(--arsenic);
         transition: all 0.3s ease-in;
         > header {
             display: flex;
