--- a/components/Elements/Loader/index.module.scss
+++ b/components/Elements/Loader/index.module.scss
@@ -4,7 +4,7 @@
     margin: 2rem auto;
 }
 .loader__icon {
-    border: 4px solid var(--red);
+    border: 4px solid var(--tomato);
     border-radius: 16px;
     -webkit-animation: spin 3s linear infinite; /* Safari */
     animation: spin 3s linear infinite;
