--- a/components/Introduction/index.module.scss
+++ b/components/Introduction/index.module.scss
@@ -8,7 +8,7 @@
         width: 230px;
         min-width: 230px;
         margin-bottom: 2rem;
-        &--red50 { box-shadow: 3px 9px 15px 2px var(--red50), -1px -1px 15px 2px var(--red50); }
+        &--tomato50 { box-shadow: 3px 9px 15px 2px var(--tomato50), -1px -1px 15px 2px var(--tomato50); }
         &--blue50 { box-shadow: 3px 9px 15px 2px var(--blue50), -1px -1px 15px 2px var(--blue50); }
         &--green50 { box-shadow: 3px 9px 15px 2px var(--green50), -1px -1px 15px 2px var(--green50); }
         &--gray50 { box-shadow: 3px 9px 15px 2px var(--gray50), -1px -1px 15px 2px var(--gray50); }
@@ -20,9 +20,9 @@
         justify-content: center;
         padding: 3rem;
         margin: 2px;
-        &--red { background-color: var(--red); }
+        &--tomato { background-color: var(--tomato); }
         &--blue { background-color: var(--blue); }
-        &--gray { background-color: var(--dark-gray); }
+        &--gray { background-color: var(--arsenic); }
         &--green { background-color: var(--green); }
         &:hover .intro__icon {
             opacity: 1;
