--- a/components/NavMenu/index.module.scss
+++ b/components/NavMenu/index.module.scss
@@ -1,5 +1,3 @@
-@import "../../styles/mixins.scss";
-
 .nav {
 	height: 80px;
 	display: flex;
@@ -7,7 +5,7 @@
 	justify-content: space-between;
     position: sticky;
     top: 0;
-	background: var(--dark-gray);
+	background: var(--arsenic);
 	z-index: 99;
 	&__brand {
 		display: flex;
@@ -41,15 +39,15 @@
 	height: 30px;
     align-items: center;
 	box-shadow: 0px 4px 20px 9px hsla(0, 0%, 42%, 0.478);
-	background: var(--dark-gray);
+	background: var(--arsenic);
 	clip-path: polygon(0% 0%,100% 0%,86% 100%,0% 100%);
 	&__icons {
 		margin: 0.6rem;
 		padding: 0.3rem;
 		display: flex;
 		align-items: flex-end;
-		border-top: 3px solid var(--dark-gray);
-		border-right: 1px solid var(--dark-gray);
+		border-top: 3px solid var(--arsenic);
+		border-right: 1px solid var(--arsenic);
 		&:hover {
 			@include active_link;
 		}
