--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -1,5 +1,5 @@
 @mixin active_link {
-    border-top: 3px solid var(--red);
-    border-right: 1px solid var(--red);
-    box-shadow: 2px 3px 5px 1px rgba(0,0,0,0.2);
+    border-top: 3px solid var(--tomato);
+    border-right: 1px solid var(--tomato);
+    box-shadow: 2px 3px 5px 1px var(--black20);
 }
