fix: navbar hover effect and hashtags on blogs

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -2,7 +2,9 @@
   // ----------------colors----------------------
   --americanBlue: hwb(221 17% 55%);
   --arsenic: hwb(210 21% 73%);
-  --black20: hwb(0 0 100% / 0.2);
+  --black: hwb(0 0% 100%);
+  --black20: hwb(0 0% 100% / 0.2);
+  --black40: hwb(0 0% 100% / 0.4);
   --blue: hwb(240 33% 29%);
   --blue50: hwb(240 33% 29% / 50%);
   --blueGray: hwb(210 40% 20%);
@@ -10,6 +12,7 @@
   --buttonBlue: hwb(206 15% 9%);
   --carbonGrey: hwb(0 37% 63%);
   --charcoal: hwb(214 21% 64%);
+  --chineseSilver20: hwb(0 80% 20% / 0.2);
   --darkCharcoal: hwb(0 20% 80%);
   --darkCharcoal25: hwb(0 20% 80% / 0.25);
   --denim: hwb(221 23% 41%);
