--- a/pages/blogs/index.module.scss
+++ b/pages/blogs/index.module.scss
@@ -3,7 +3,7 @@
     border-left: 2px solid var(--arsenic);
     padding: 0.4rem 0.5rem;
     margin: 1.5rem 0;
-    background-color: hsla(0, 0, 71%, 0.2);
+    background-color: var(--chineseSilver20);
     width: fit-content;
 }
 .filter {
@@ -21,23 +21,25 @@
     }
     &__select {
         padding: 0.35rem 0.4rem 0.4rem 0.4rem;
-        border: 1px solid black;
+        border: 1px solid var(--black);
         border: 2px solid var(--arsenic);
         outline: 0;
         caret-color: var(--tomato);
     }
 }
 .blogpage {
+    position: relative;
     &__back {
-        display: flex;
-        justify-content: flex-end;
+        position: absolute;
+        right: 0;
+        top: -3rem;
     }
     &__header {
         border-bottom: 1px solid var(--tomato);
         padding-bottom: 0.5rem;
         text-align: center;
         > h1 {
-            font-size: 2rem;
+            font-size: 2.5rem;
             margin: 0.5rem 0 0 0;
         }
     }
@@ -55,12 +57,12 @@
         height: 66px;
         justify-content: center;
         border-radius: 50%;
-        color: white;
+        color: var(--white);
         position: fixed;
         right: 18px;
         bottom: 90px;
         cursor: pointer;
-        box-shadow: rgb(0 0 0 / 40%) 0px 4px 8px;
+        box-shadow: 0px 4px 8px var(--black40);
         span:first-child {
             font-size: 1.5rem;
         }
@@ -89,7 +91,7 @@
         }
     }
     &__icon { width: 1rem; }
-    &__label {font-size: 0.8rem; }
+    &__label { font-size: 0.8rem; }
 }
 @media screen and (max-width: 600px) {
     .filter__input {
