refactoring done for all pages

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -34,6 +34,7 @@
   --pictonBlue25: hwb(206 33% 7% / 0.25);
   --pictonBlue80: hwb(206 33% 7% / 0.80);
   --rhino: hwb(221 17% 55%);
+  --rebecapurple: hwb(270 20% 40%);
   --seaBlue: hwb(200 0% 40%);
   --sepia: hwb(40 87% 4%);
   --sonicSilver: hwb(0 47% 53%);
