--- a/components/Blog/index.module.scss
+++ b/components/Blog/index.module.scss
@@ -1,11 +1,9 @@
 .post {
-    box-shadow: 0px 0px 14px 1px rgba(193, 193, 193, 50%);
+    box-shadow: 1px 6px 20px 0px rgb(131 131 131 / 43%);
     padding: 0.8rem;
     margin: 1.5rem 0;
     transition: all 0.3s ease-in;
-    &:hover {
-        box-shadow: 2px 4px 16px 1px var(--loblolly50), -2px -4px 16px 1px var(--loblolly50);
-    }
+    border-radius: 5px;
     &__header {
         flex-direction: column;
         align-items: flex-start;
@@ -22,6 +20,7 @@
 .stats {
     font-size: 0.8rem;
     font-weight: 200;
+    margin-top: 0.5rem;
     span:not(:first-child)::before {
         content: "";
         display: inline-block;
