--- a/components/Elements/Dropdown/index.module.scss
+++ b/components/Elements/Dropdown/index.module.scss
@@ -3,7 +3,6 @@
     position: relative;
     &__header {
         font-size: 14px;
-        opacity: 0.6;
         font-weight: 400;
     }
     &__title {
@@ -14,6 +13,7 @@
         cursor: pointer;
         border: 2px solid var(--arsenic);
         margin-bottom: 2px;
+        border-radius: 2px;
     }
     &__list {
         position: absolute;
