--- a/components/Elements/IconButton/index.module.scss
+++ b/components/Elements/IconButton/index.module.scss
@@ -3,6 +3,7 @@
   margin: 0.5rem;
   padding: 0.5rem 0.75rem;
   transition: 0.3s all linear;
+  border-radius: 2px;
   &__icon {
     stroke-width: 0;
     width: 1.2rem;
