--- a/components/NavMenu/index.module.scss
+++ b/components/NavMenu/index.module.scss
@@ -1,8 +1,18 @@
+@mixin highlight_link {
+	border-bottom: 4px solid var(--tomato);
+}
+@mixin active_menu {
+	color: var(--arsenic);
+}
+
+.active {
+	@include highlight_link
+}
+
 .nav {
 	position: sticky;
 	top: 0;
 	z-index: 99;
-
 	&__social {
 		display: flex;
 		height: 30px;
@@ -26,7 +36,6 @@
 			letter-spacing: 1px;
 		}
 	}
-
 	&__icons {
 		position: relative;
 		margin: 0.6rem;
@@ -50,43 +59,88 @@
             filter: drop-shadow(1px 1px 8px rgba(0,0,0,0.4));
 		}
 	}
-
 	&__navbar {
 		padding: 0.5rem 0.5rem 0.5rem 6rem;
 		background: var(--arsenic);
 		display: flex;
 		justify-content: space-between;
 	}
-
 	&__brand {
 		display: flex;
 		align-items: center;
 		width: 110px;
 	}
-
 	&__menu {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
 		width: 400px;
-		a {
-			color: white;
-			padding: 0.5rem;
-			font-size: 0.8rem;
-			transition: 0.2s all ease-in-out;
-			&:hover {
-				@include active_link;
-			}
-			span {
-				font-size: 0.9rem;
-				letter-spacing: 1px;
-			}
+	}
+	&__menu_routes {
+		color: white;
+		padding: 0.5rem;
+		font-size: 0.8rem;
+		transition: 0.1s all ease-in-out;
+		&:hover {
+			@include highlight_link;
+		}
+		span {
+			font-size: 0.9rem;
+			letter-spacing: 1px;
+		}
+	}
+	&__dropdown {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		position: relative;
+	}
+	&__dropdown_btn {
+		color: var(--sepia);
+		cursor: pointer;
+		padding: 0.5rem;
+		transition: 0.1s all ease-in-out;
+		display: flex;
+		align-items: center;
+		span {
+			margin-right: 0.2rem;
+		}
+	}
+	&__dropdown_routes {
+		color: var(--arsenic);
+		background-color: var(--tomato);
+		position: absolute;
+		top: 2.8rem;
+		display: flex;
+		justify-content: space-around;
+		flex-direction: column;
+		align-items: center;
+		padding: 0.5rem 0;
+		width: 150px;
+		border-radius: 2px;
+		height: 180px;
+		box-shadow: 5px 5px 16px 4px rgba(0, 0, 0, 0.4);
+	}
+	&__dropdown_menu {
+		width: fit-content;
+		color: var(--sepia);
+		font-weight: 400;
+		font-size: 0.9rem;
+		&:hover {
+			opacity: 0.8;
 		}
 	}
 }
-.active {
-	@include active_link
+.show_services {
+	display: flex;
 }
+.hide_services {
+	display: none;
+}
+.active_menu {
+	@include active_menu;
+}
+
 @media screen and (max-width: 600px) {
 	.nav {
 		&__navbar {
@@ -95,9 +149,6 @@
 			flex-direction: column;
 			padding: 0;
 			height: 130px;
-		}
-		&__menu {
-			width: 300px;
 		}
 		&__brand {
 			width: 80px;
