--- a/pages/about/index.module.scss
+++ b/pages/about/index.module.scss
@@ -1,86 +1,105 @@
 .about {
-    figure {
-        border-radius: 50%;
-        margin: 0.5rem auto;
-        height: 160px;
-        width: 160px;
-        box-shadow: 0 1px 10px 1px rgb(0 0 0 / 20%);
+    &__row {
+        padding: 5rem 3rem;
+        h1 {
+            font-size: 3rem;
+            letter-spacing: 4px;
+            margin: 1rem 0 4rem 0;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            text-align: center;
+        }
+        h3 {
+            font-weight: 500;
+            font-size: 1.5rem;
+            letter-spacing: 1px;
+            max-width: 800px;
+            text-align: center;
+            margin: 1rem auto;
+        }
+        p {
+            line-height: 1.8;
+            max-width: 800px;
+            text-align: center;
+            margin: 1rem auto 2rem auto;
+        }
+        &:nth-child(odd) {
+            background-color: var(--arsenic);
+            color: var(--sepia);
+        }
+        &:nth-child(even) {
+            background-color: var(--sepia);
+            color: var(--arsenic);
+        }
     }
-    summary, ul {
-        font-size: 0.9rem;
-        line-height: 1.5rem;
-        margin: 1.5rem 0;
-        text-align: justify;
-    }
-    &__icons {
+    &__service {
         display: flex;
-        justify-content: center;
-    }
-    &__container {
-        padding: 0.2rem 0.4rem;
-        display: flex;
-        align-items: center;
-    }
-    &__icon {
-        width: 0.8rem;
-        height: 0.8rem;
-        &--tomato {
-            fill: red;
-        }
-    }
-    &__iconlabel {
-        font-size: 0.7rem;
-    }
-    &__story {
-        position: relative;
-        width: fit-content;
-        margin: 2rem auto;
-        &::after {
-            content: "";
-            position: absolute;
-            width: 80px;
-            border-top: 2px solid var(--tomato);
-            top: 18px;
-            left: -90px;
-        }
-        &::before {
-            content: "";
-            position: absolute;
-            width: 80px;
-            border-top: 2px solid var(--tomato);
-            top: 18px;
-            right: -90px;
-        }
+        flex-direction: column;
     }
     &__services {
-        list-style: none;
-        padding: 0;
-        li {
-            display: flex;
-            align-items: center;
-            margin-bottom: 0.5rem;
-        }
-        label {
-            margin-left: 0.5rem;
-        }
-    }
-    &__check {
-        width: 14px;
-        height: 14px;
-        stroke: tomato;
-        stroke-linecap: round;
-        stroke-linejoin: round;
-        stroke-width: 2;
-        fill: none;
-    }
-    &__support {
         display: flex;
-        justify-content: center;
-        margin: 2rem 0;
+        justify-content: space-between;
+        a {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            max-width: 120px;
+        }
+        figure {
+            border-top: 3px solid var(--white);
+            border-right: 1px solid var(--white);
+            box-shadow: 2px 3px 5px 1px var(--black20);
+            padding: 0.5rem 1rem;
+        }
     }
-}
-@media screen and (max-width: 768px) {
-    .intro {
-        justify-content: center;
+    &__team {
+        display: flex;
+        justify-content: space-evenly;
+    }
+    &__contact {
+        color: var(--white);
+        padding: 0.5rem;
+        font-size: 1.5rem;
+        display: block;
+        width: 220px;
+        letter-spacing: 2px;
+        text-align: center;
+        margin: 4rem auto 0 auto;
+        border-top: 3px solid var(--tomato);
+        border-right: 1px solid var(--tomato);
+        box-shadow: 2px 3px 5px 1px var(--black20);
+    }
+    &__find_us {
+        display: flex;
+        justify-content: space-evenly;
+        figure:first-child {
+            padding: 0.4rem;
+            background-color: var(--white);
+            box-shadow: 0px -9px 20px 5px var(--black20);
+            figcaption {
+                font-weight: 200;
+                letter-spacing: 1px;
+            }
+        }
+    }
+    &__followus {
+        figure {
+            display: flex;
+            justify-content: space-between;
+            margin: 0.5rem 0;
+        }
+    }
+    @media screen and (max-width: 640px) {
+        p {
+            text-align: justify;
+        }
+        &__services {
+            flex-wrap: wrap;
+        }
+        &__team {
+            flex-direction: column;
+        }
+        &__find_us {
+            flex-direction: column;
+        }
     }
 }
