--- a/pages/blogs/index.module.scss
+++ b/pages/blogs/index.module.scss
@@ -1,10 +1,16 @@
+.blogs {
+    max-width: 900px;
+    padding: 2rem 1rem;
+    margin: 1rem auto;
+}
 .summary {
     font-size: 0.8rem;
-    border-left: 2px solid var(--arsenic);
+    border-left: 4px solid var(--tomato);
     padding: 0.4rem 0.5rem;
     margin: 1.5rem 0;
-    background-color: var(--chineseSilver20);
+    background-color: var(--loblolly50);
     width: fit-content;
+    border-radius: 2px;
 }
 .filter {
     margin-bottom: 1rem;
@@ -12,7 +18,7 @@
     justify-content: space-between;
     &__input {
         padding: 0.4rem;
-        border-radius: 0;
+        border-radius: 2px;
         min-width: 150px;
         border: 2px solid var(--arsenic);
         width: 75%;
@@ -29,10 +35,13 @@
 }
 .blogpage {
     position: relative;
+    max-width: 900px;
+    padding: 2rem 1rem;
+    margin: 3rem auto 0;
     &__back {
         position: absolute;
         right: 0;
-        top: -3rem;
+        top: -2rem;
     }
     &__header {
         border-bottom: 1px solid var(--tomato);
@@ -92,7 +101,14 @@
     }
     &__label { font-size: 0.8rem; }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 640px) {
+    .blogs {
+        padding: 2rem 1rem 0;
+        max-width: 100%;
+    }
+    .blogpage {
+        max-width: 100%;
+    }
     .filter__input {
         max-width: 180px;
     }
